[gd_scene load_steps=23 format=2]

[ext_resource path="res://assets/enemies/character_robot_walk1.png" type="Texture" id=1]
[ext_resource path="res://assets/enemies/character_robot_walk6.png" type="Texture" id=2]
[ext_resource path="res://assets/enemies/character_robot_walk2.png" type="Texture" id=3]
[ext_resource path="res://assets/enemies/character_robot_walk7.png" type="Texture" id=4]
[ext_resource path="res://assets/enemies/character_robot_walk5.png" type="Texture" id=5]
[ext_resource path="res://assets/enemies/character_robot_walk4.png" type="Texture" id=6]
[ext_resource path="res://assets/enemies/character_robot_walk3.png" type="Texture" id=7]
[ext_resource path="res://assets/enemies/character_robot_attackKick.png" type="Texture" id=8]
[ext_resource path="res://assets/enemies/character_robot_run2.png" type="Texture" id=9]
[ext_resource path="res://assets/enemies/character_robot_duck.png" type="Texture" id=10]
[ext_resource path="res://assets/enemies/character_robot_hit.png" type="Texture" id=11]
[ext_resource path="res://assets/enemies/character_robot_run0.png" type="Texture" id=12]
[ext_resource path="res://assets/enemies/character_robot_run1.png" type="Texture" id=13]
[ext_resource path="res://scripts/Robot.gd" type="Script" id=15]
[ext_resource path="res://assets/emote_exclamation.png" type="Texture" id=16]
[ext_resource path="res://assets/emote_stars.png" type="Texture" id=17]
[ext_resource path="res://assets/enemies/character_robot_down.png" type="Texture" id=18]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 18 ) ],
"loop": true,
"name": "dead",
"speed": 5.0
}, {
"frames": [ ExtResource( 1 ), ExtResource( 3 ), ExtResource( 7 ), ExtResource( 6 ), ExtResource( 5 ), ExtResource( 2 ), ExtResource( 4 ) ],
"loop": true,
"name": "walking",
"speed": 5.0
}, {
"frames": [ ExtResource( 12 ), ExtResource( 13 ), ExtResource( 9 ) ],
"loop": true,
"name": "running",
"speed": 5.0
}, {
"frames": [ ExtResource( 11 ) ],
"loop": true,
"name": "hit",
"speed": 5.0
}, {
"frames": [ ExtResource( 8 ) ],
"loop": true,
"name": "attack_kick",
"speed": 5.0
}, {
"frames": [ ExtResource( 10 ) ],
"loop": true,
"name": "crouch",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 8.25, 16.25 )

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ ExtResource( 16 ) ],
"loop": true,
"name": "exclamation",
"speed": 5.0
}, {
"frames": [ ExtResource( 17 ) ],
"loop": true,
"name": "stunned",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 9.47368, 1 )

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 11, 15 )

[node name="Robot" type="KinematicBody2D"]
collision_layer = 2
collision_mask = 5
script = ExtResource( 15 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
scale = Vector2( 0.4, 0.4 )
frames = SubResource( 1 )
animation = "walking"
frame = 2
playing = true
flip_h = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0.25, 8.75 )
shape = SubResource( 5 )

[node name="vision_Cast" type="RayCast2D" parent="."]
rotation = 1.48353
scale = Vector2( 0.8, 0.8 )
enabled = true
cast_to = Vector2( 23, 60 )
collision_mask = 53

[node name="vision_Cast2" type="RayCast2D" parent="."]
rotation = 1.48353
scale = Vector2( 0.8, 0.8 )
enabled = true
cast_to = Vector2( 25, 25 )
collision_mask = 53

[node name="floor_checker" type="RayCast2D" parent="."]
scale = Vector2( 0.5, 0.5 )
enabled = true
cast_to = Vector2( 0, 55 )
collision_mask = 4

[node name="State" type="AnimatedSprite" parent="."]
visible = false
position = Vector2( 0, -18 )
scale = Vector2( 0.5, 0.5 )
frames = SubResource( 3 )
animation = "stunned"

[node name="Run_Timer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="Death_Timer" type="Timer" parent="."]
one_shot = true

[node name="top_checker" type="Area2D" parent="."]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="top_checker"]
position = Vector2( 0, -9 )
scale = Vector2( 0.95, 1 )
shape = SubResource( 4 )

[node name="Hit_Timer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="sides_checker" type="Area2D" parent="."]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="sides_checker"]
position = Vector2( 1, 10 )
shape = SubResource( 6 )

[connection signal="timeout" from="Run_Timer" to="." method="_on_Run_Timer_timeout"]
[connection signal="timeout" from="Death_Timer" to="." method="_on_Death_Timer_timeout"]
[connection signal="body_entered" from="top_checker" to="." method="_on_top_checker_body_entered"]
[connection signal="timeout" from="Hit_Timer" to="." method="_on_Hit_Timer_timeout"]
[connection signal="body_entered" from="sides_checker" to="." method="_on_sides_checker_body_entered"]
